--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,410 @@
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 2620!!!!!</h1>
-<script type="module" src="./javascripts/main.js"></script>
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="#" id="first">Marketing Site</a></li>
+      <li><a href="#">One</a></li>
+      <li><a href="#">Two</a></li>
+      <li><a href="#">Three</a></li>
+      <li><a href="#">Four</a></li>
+      <li><a href="#">Five</a></li>
+      <li><a href="#">Six</a></li>
+    </ul>
+  </nav>
+
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <div class="jumboContent">
+      <!-- Left Half of the Jumbotron -->
+      <div class="left">
+        <h1>Jumbotron</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo nisl dolor, et 
+          auctor nisl pretium ultricies. In sagittis metus diam, non dapibus libero aliquam 
+          sed. Maecenas rutrum mollis ex, at ultricies nisl vestibulum non. Ut sodales nisi 
+          eget metus auctor iaculis. Vivamus dapibus at augue et luctus.
+        </p>
+        <div class="button">
+          <button>Learn more</button>
+        </div>
+      </div>
+      <!-- Right Half of the Jumbotron -->
+      <div class="right">
+        <h1><span class="firstWord">Text</span> <span class="secondWord">colors</span></h1>
+        <div class="animations">
+          <div class="animation1">
+            <div class="color1">#FFFDD0</div>
+          </div>
+          <div class="animation2">
+            <div class="color2">White</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <main>
+    <!-- First Title -->
+    <div class="title1">Our Newest Products</div>
+
+    <!-- First Image Row -->
+    <div class="imgRow1">
+      <!-- Image #1 -->
+      <div class="newProd">
+        <div class="newProdInfo">
+          <div class="prodImg">
+            <img src="images/luisana-zerpa-fa59muUjyec-unsplash.jpg" alt="Red Velvet Cupcake">
+          </div>
+          <div class="prodText">
+            <p>
+              <span class="prodTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="prodPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #2 -->
+      <div class="newProd">
+        <div class="newProdInfo">
+          <div class="prodImg">
+            <img src="images/luisana-zerpa-fa59muUjyec-unsplash.jpg" alt="Red Velvet Cupcake">
+          </div>
+          <div class="prodText">
+            <p>
+              <span class="prodTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="prodPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #3 -->
+      <div class="newProd">
+        <div class="newProdInfo">
+          <div class="prodImg">
+            <img src="images/luisana-zerpa-fa59muUjyec-unsplash.jpg" alt="Red Velvet Cupcake">
+          </div>
+          <div class="prodText">
+            <p>
+              <span class="prodTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="prodPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #4 -->
+      <div class="newProd">
+        <div class="newProdInfo">
+          <div class="prodImg">
+            <img src="images/luisana-zerpa-fa59muUjyec-unsplash.jpg" alt="Red Velvet Cupcake">
+          </div>
+          <div class="prodText">
+            <p>
+              <span class="prodTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="prodPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Message -->
+    <div class="message">
+      <p>Really big special this week on items.</p>
+    </div>
+
+    <!-- Second Title -->
+    <div class="title2">Some Other Neat Products</div>
+
+    <!-- Second Image Row -->
+    <div class="imgRow2">
+      <!-- Image #1 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #2 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #3 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #4 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #5 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+
+      <!-- Image #6 -->
+      <div class="smallProd">
+        <div class="smallProdInfo">
+          <div class="smallProdImg">
+            <img src="images/heather-mount-kg60vwnXHro-unsplash.jpg" 
+              alt="Mountain of Red Velvet Cupcakes">
+          </div>
+          <div class="smallProdText">
+            <p>
+              <span class="smallTitle">Nulla At Nulla Justo, Eget</span>
+              <br>
+              <span class="smallPrice">$400</span>
+            </p>
+          </div>
+          <button>Buy</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Third Image Row -->
+    <div class="imgRow3">
+      <!-- List #1 -->
+      <div class="imgList">
+        <div class="imgListTitle">
+          <p>Top Products</p>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/owen-bruce-fJ2aEP5bsnA-unsplash.jpg" 
+              alt="Red Velvet Cupcakes seen from above">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/adrian-greaves-n_8u1YWp9eY-unsplash.jpg" 
+              alt="Red Velvet Birthday Cake">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo" id="lastList">
+          <div class="listImg">
+            <img src="images/amirali-mirhashemian-EfkMkUXs0fU-unsplash.jpg" 
+              alt="A Red Velvet Cake and its slice">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- List #2 -->
+      <div class="imgList">
+        <div class="imgListTitle">
+          <p>Top Products</p>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/owen-bruce-fJ2aEP5bsnA-unsplash.jpg" 
+              alt="Red Velvet Cupcakes seen from above">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/adrian-greaves-n_8u1YWp9eY-unsplash.jpg" 
+              alt="Red Velvet Birthday Cake">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo" id="lastList">
+          <div class="listImg">
+            <img src="images/amirali-mirhashemian-EfkMkUXs0fU-unsplash.jpg" 
+              alt="A Red Velvet Cake and its slice">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- List #3 -->
+      <div class="imgList">
+        <div class="imgListTitle">
+          <p>Top Products</p>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/owen-bruce-fJ2aEP5bsnA-unsplash.jpg" 
+              alt="Red Velvet Cupcakes seen from above">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo">
+          <div class="listImg">
+            <img src="images/adrian-greaves-n_8u1YWp9eY-unsplash.jpg" 
+              alt="Red Velvet Birthday Cake">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+        <div class="imgListInfo" id="lastList">
+          <div class="listImg">
+            <img src="images/amirali-mirhashemian-EfkMkUXs0fU-unsplash.jpg" 
+              alt="A Red Velvet Cake and its slice">
+          </div>
+          <div class="listDesc">
+            <p class="descTitle">Nunc Eu Ullamcorper Orci</p>
+            <p class="descText">
+              Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footContent">
+      <div class="smallEmptySpace"></div>
+      <div class="FilledSpace1">
+        <h4>Vivamus Hendrerit Arcu Sed Erat Molestie</h4>
+        <p>
+          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac 
+          egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per 
+          conubia nostra, per inceptos himenaeos. Sed molestie augue sit.
+        </p>
+      </div>
+      <div class="smallEmptySpace"></div>
+      <div class="FilledSpace2">
+        <ul>
+          <li><a href="#">One</a></li>
+          <li><a href="#">Two</a></li>
+          <li><a href="#">Three</a></li>
+          <li><a href="#">Four</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">One</a></li>
+          <li><a href="#">Two</a></li>
+          <li><a href="#">Three</a></li>
+          <li><a href="#">Four</a></li>
+        </ul>
+      </div>
+      <div class="bigEmptySpace"></div>
+    </div>
+  </footer>
+
+  <!-- Type of Script -->
+  <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
